--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: center;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  position: relative;
+}
+.container{
+  display: grid;
+  place-items: center;
+}
+.title{
+  text-transform: capitalize;
+  background: linear-gradient(purple 20%, lightseagreen);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 2rem;
+}
+.form{
+  width: 70vw;
+  box-shadow: 0px 2px 5px 1px grey;
+  padding: 1rem;
+}
+.input{
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: lightgray;
+  width: 70%;
+  padding: 3px 3px 3px 10px;
+  text-align: left;
+}
+button{
+  padding: 3px 10px;
+  border: none;
+  color: whitesmoke;
+  cursor: pointer;
+}
+.submit{
+border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: lightseagreen;
+  text-transform: capitalize;
 }
