--- a/src/components/list.css
+++ b/src/components/list.css
@@ -1,37 +1,44 @@
 .list-container{
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 1.2rem;
+    padding: 0.5rem 1rem;
     border-bottom: 1px dashed seagreen;
+    width: 83%;
+    margin: 0 auto;
 }
-
+.list-container p{
+    font-size: 1.5rem;
+}
 .edit{
     background-color: green;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     position: relative;
+    height: 2rem;
 }
 .edit:hover::before{
 position: absolute;
 top: 0.1rem;
-left: -2.47rem;
-font-size: 3px;
+left: -3.5rem;
+font-size: 5px;
 display:block;
 content: "edit";
+width: 2.2rem;
+height: 1.3rem;
 background-color: green;
 border-radius: 0.3rem;
-padding: 0.1rem 0.3rem;
+padding: 0.3rem;
 color: white;
 }
 .edit:hover::after{
 position: absolute;
-top: 0.5rem;
-left: -0.343rem;
+top: 0.6rem;
+left: -0.65rem;
 display:block;
 content: " ";
 width: 0;
 height: 0;
-border: 4px solid transparent;
+border: 7px solid transparent;
 border-left-color: green;
 }
 .edit:hover{
@@ -42,6 +49,7 @@ border-left-color: green;
     background-color: red;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    height: 2rem;
     position: relative;
 }
 .remove:hover{
@@ -52,36 +60,54 @@ border-left-color: green;
 .remove:hover::before{
 position: absolute;
 top: 0.1rem;
-right: -3.5rem;
-font-size: 3px;
+right: -3.6rem;
+font-size: 5px;
 display:block;
 content: "delete";
 background-color: red;
+width: 2.5rem;
+height: 1.3rem;
 border-radius: 0.3rem;
-padding: 0.1rem 0.3rem;
+padding: 0.3rem;
 color: white;
 }
 .remove:hover::after{
 position: absolute;
 top: 0.5rem;
-right: -0.343rem;
+right: -0.5rem;
+top: 0.6rem;
 display:block;
 content: " ";
 width: 0;
 height: 0;
-border: 4px solid transparent;
+border: 7px solid transparent;
 border-right-color: red;
 }
 .clear-btn{
     background-color: red;
+    width: 15rem;
+    height: 2rem;
     margin-top: 1rem;
     border-radius: 100px;
     padding: 0.3rem 1rem;
 }
 
-@media (max-width:380px){
-  .list-container{
-    padding: 0.3rem;
+@media (max-width: 415px){
+.list-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem;
     border-bottom: 1px dashed seagreen;
-}  
+    width: 100%;
+    margin: 0 auto;
+}
+.list-container p{
+    font-size: 1.35rem;
+} 
+.clear-btn{
+    background-color: red;
+    width: 8rem;
+    height: 2rem;
+    margin-top: 1rem;
+}
 }
